<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_header_grafana">

        <EditTextPreference
            android:key="endpoint_url"
            android:title="@string/pref_title_endpoint_url"
            android:summary="@string/pref_summary_endpoint_url"
            android:inputType="textUri"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:key="username"
            android:title="@string/pref_title_username"
            android:summary="@string/pref_summary_username"
            android:inputType="number"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:key="api_key"
            android:title="@string/pref_title_api_key"
            android:summary="@string/pref_summary_api_key"
            android:inputType="textPassword"
            app:useSimpleSummaryProvider="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_ble">

        <EditTextPreference
            android:key="device_name"
            android:title="@string/pref_title_device_name"
            android:summary="@string/pref_summary_device_name"
            android:defaultValue="R02"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:key="poll_interval_ms"
            android:title="@string/pref_title_poll_interval"
            android:summary="@string/pref_summary_poll_interval"
            android:defaultValue="5000"
            android:inputType="number"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_sync">

        <EditTextPreference
            android:key="flush_interval_ms"
            android:title="@string/pref_title_flush_interval"
            android:summary="@string/pref_summary_flush_interval"
            android:defaultValue="15000"
            android:inputType="number"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:key="buffer_max_rows"
            android:title="@string/pref_title_buffer_max_rows"
            android:summary="@string/pref_summary_buffer_max_rows"
            android:defaultValue="10000"
            android:inputType="number"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
